--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -179,7 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/app_name"
+            android:text="@string/app_name_detail"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:fontFamily="@font/roboto"
