--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -47,6 +47,7 @@
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="14sp"
+            android:maxLength="10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />
@@ -119,7 +120,7 @@
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:onClick="@{()-> callback.onForgetPassword()}"
-            android:text="Forget Password"
+            android:text="Forgot Password"
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="14sp"
@@ -156,7 +157,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/app_name_detail"
+            android:text="@string/app_name_details"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:fontFamily="@font/roboto"
