--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -107,6 +107,7 @@
             android:gravity="center_vertical"
             android:hint="Phone Number"
             android:inputType="number"
+            android:maxLength="10"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textColor="@color/black"
@@ -179,7 +180,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/app_name_detail"
+            android:text="@string/app_name_details"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:fontFamily="@font/roboto"
