--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/app_name_detail"
+            android:text="@string/app_name_details"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:fontFamily="@font/roboto"
