--- a/app/src/main/res/layout/item_home_pager.xml
+++ b/app/src/main/res/layout/item_home_pager.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            app:srcImage="@{vm.pan3Details}"
-            android:layout_height="200dp" />
+            app:srcImage="@{vm.pan3Image}"
+            android:scaleType="fitXY"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </layout>
